peac_dev/force-app/main/default/objects/Franchisor__c/Franchisor__c.object-meta.xml
<CustomObject>
    <label>Franchisor</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Franchisor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Franchisors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>