peac_dev/force-app/main/default/objects/Franchisor__c/fields/Franchisor__c.field-meta.xml
<CustomField>
    <fullName>Franchisor__c</fullName>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Franchisor Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Franchisors</relationshipLabel>
    <relationshipName>Franchisors</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>