peac_dev/force-app/main/default/objects/Franchisor__c/fields/Franchisor_Number__c.field-meta.xml
<CustomField>
    <fullName>Franchisor_Number__c</fullName>
    <formula>Franchisor__r.Dealer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Franchisor Number</label>
    <type>Text</type>
</CustomField>